--- a/Design Responsivo/css/fluido.css
+++ b/Design Responsivo/css/fluido.css
@@ -7,21 +7,15 @@
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
+.titulo{
+	text-align: left;
+	border-bottom: 1px solid black;
+}
 #corpo{
 	width: 100%;
-	background: #eee;
-}
-#topo{
-	background: #D2803A;
-	height: 150px
 }
 #conteudo{
-	background: #505050;
 	height: 675px;
-}
-#rodape{
-	background: #000;
-	height: 100px;
 }
 #topo,#conteudo,#rodape{
 	width: 80%;
@@ -29,11 +23,11 @@
 }
 .line{
 	width: 100%;
-	height: 28px;
+	height: 25px;
+	margin-bottom: 4px;
 }
 .grid{
 	float: left;
-	display: inline;
 	height: 100%;
 }
 .col1{
@@ -81,46 +75,62 @@
 .align-right{
 	text-align: right;
 }
-/*.col13{
-	width: 75%;
+input.grid:hover,select.grid:hover{
+	border-color: #1E90FF;
 }
-.col14{
-	width: 83.333333333333333%;
+input.grid:focus,select.grid:focus{
+	border-color: #1E90FF;
+	box-shadow: 0 0 1px #1E90FF;
 }
-.col15{
-	width: 91.666666666666666%;
-}
-.col16{
-	width: 91.666666666666666%;
-}*/
 label.grid{
 	text-align: right;
-	padding: 3px 3px 0 0;
 	display: inline-block;
 	font-size: 16px;
+	padding: 2px 2px;
 	font-family: "Calibri Light";
 }
-input.grid{
-	font-size: 14px;
-    border: 1px solid #000;
-    font-family: inherit;
-    padding: 3px;
+input.grid,select.grid{
+	border-radius: 1px;
+	font-size: 16px;
+    border: 1px solid #9C9C9C;
     max-width: 100%;
     max-height: 26px;
     background-color: white;
     transition: all 0.2s ease;
     transition-property: box-shadow, border, color, background-color;
-}
-input[type=radio]{
-
+    font-family: "Calibri Light";
 }
 .radio-option{
 	position: relative;
-	padding: 7px 5px;
+	display: inline-block;
 }
-.radio > label{
-	padding: 3px 3px 0 0;
+.radio-option > label{
+	padding: 0 3px;
 	display: inline-block;
 	font-size: 16px;
 	font-family: "Calibri Light";
+}
+.radio{
+		padding-top: 3px;
+		position: relative;
+}
+input[type=radio]{
+	float: left;
+	margin: 3px 0 0 1px;
+}
+@media screen and (max-width:920px){
+	.grid{
+		display: block;
+	}
+	.radio-option{
+		position: relative;
+		display: inline-block;
+	}
+	.radio,input.grid,select.grid{
+		width: 100%;
+	}
+	label.grid{
+		width: 100%;
+		text-align: left;
+	}
 }
