--- a/Design Responsivo/css/fluido.css
+++ b/Design Responsivo/css/fluido.css
@@ -13,8 +13,8 @@
     padding-left: 8%;
     font-size: 30px;
 	border-bottom: 2px solid #1E90FF;
-	font-family: "Roboto-Light";
-	font-weight: normal;
+	font-family: "Gravity-Light";
+	font-weight: bold;
 }
 #corpo{
 	width: 100%;
@@ -95,6 +95,7 @@ label.grid{
 	font-family: "Roboto-Light";
 }
 input.grid,select.grid{
+	padding-left: 3px;
 	border-radius: 1px;
 	font-size: 16px;
     border: 1px solid #9C9C9C;
@@ -119,10 +120,51 @@ input.grid,select.grid{
 		padding-top: 3px;
 		position: relative;
 }
+
 input[type=radio]{
-	float: left;
 	margin: 3px 0 0 1px;
 }
+input[type=radio].css-checkbox {
+	position:absolute; 
+	z-index:-1000;
+	left:-1000px;
+	overflow: hidden;
+	clip: rect(0 0 0 0);
+	height:1px;
+	width:1px;
+	margin:-1px;
+	padding:0;
+	border:0;
+
+}
+
+input[type=radio].css-checkbox + label.css-label {
+	padding-left:21px;
+	height:16px; 
+	display:inline-block;
+	line-height:16px;
+	background-repeat:no-repeat;
+	background-position: 0 0;
+	font-size:14px;
+	vertical-align:middle;
+	cursor:pointer;
+
+}
+
+input[type=radio].css-checkbox:checked + label.css-label {
+	background-position: 0 -16px;
+}
+label.css-label {
+	background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_cce337a3f8bb55521f55ec55906db31e.png);
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+
 @media screen and (max-width:920px){
 	.grid{
 		display: block;
