--- a/Design Responsivo/css/fonts.css
+++ b/Design Responsivo/css/fonts.css
@@ -1,12 +1,23 @@
 
 @font-face {
 	font-family: "Roboto-Light";
-	src: url("../fonts/Roboto-Light.ttf") format("truetype");
-	src: url('../fonts/roboto-light-webfont.eot');
-	src: url('../fonts/roboto-light-webfont.eot?#iefix') format('embedded-opentype'),
-		 url('../fonts/roboto-light-webfont.woff2') format('woff2'),
-		 url('../fonts/roboto-light-webfont.woff') format('woff'),
-		 url('../fonts/roboto-light-webfont.svg#robotolight') format('svg');
+	src: url("../fonts/Roboto/Roboto-Light.ttf") format("truetype");
+	src: url('../fonts/Roboto/roboto-light-webfont.eot');
+	src: url('../fonts/Roboto/roboto-light-webfont.eot?#iefix') format('embedded-opentype'),
+		 url('../fonts/Roboto/roboto-light-webfont.woff2') format('woff2'),
+		 url('../fonts/Roboto/roboto-light-webfont.woff') format('woff'),
+		 url('../fonts/Roboto/roboto-light-webfont.svg#robotolight') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
+	font-family: "Gravity-Light";
+	src: url("../fonts/Gravity/Gravity-Light.ttf") format("truetype");
+    src: url('../fonts/Gravity/gravity-light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/Gravity/gravity-light-webfont.woff2') format('woff2'),
+         url('../fonts/Gravity/gravity-light-webfont.woff') format('woff'),
+         url('../fonts/Gravity/gravity-light-webfont.ttf') format('truetype'),
+         url('../fonts/Gravity/gravity-light-webfont.svg#gravitylight') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
