--- a/Design Responsivo/css/fluido.css
+++ b/Design Responsivo/css/fluido.css
@@ -90,7 +90,7 @@ label.grid{
 	text-align: right;
 	display: inline-block;
 	font-size: 14px;
-	padding: 2px 2px;
+	padding: 4px 2px;
 	font-family: "Roboto-Light";
 }
 input.grid,select.grid{
@@ -160,6 +160,28 @@ label.css-label {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;*/
+}
+table.grid{
+	float: none;
+	font-family: "Roboto-Light";
+	font-size: 14px;
+	line-height: 1.4;
+	border: 1px solid #A2D5F9;
+}
+table.grid th{
+	font-weight: bold;
+}
+table.grid td{
+	padding: 2px;
+	text-align: center;
+}
+table.grid tr > td:hover{
+	cursor: default;
+
+}
+table.grid tr > th{
+	padding: 4px;
+	background-color: #A2D5F9;
 }
 
 
